# SerenityFlow

./: .gitignore  CLAUDE.md  CLAUDE_BROWSER_TASKLIST.md  HANDOFF_FP8_GEMMA_SESSION.md  HANDOFF_LTX23_2026-03-22.md  README.md  TEST_CODEFORMER_NLE.md  gen_10s.py  pyproject.toml  run.sh  test_bf16.py  test_bf16_cpu.py  test_bf16_direct.py  test_compare_embeddings.py  test_desktop_path.py  test_distilled.py  test_embed_values.py  test_embeddings.py  test_embeddings_only.py  test_giger.py  test_latent_check.py  test_official_encode.py  test_single_step.py  test_stagehand_debug.py  test_stg_gen.py  toTESTSerenityflow.md  worked_on_fp8.md
docs/: canvas-parity-plan.md  generate-tab-overhaul-plan.md  invokeai-parity-plan.md
serenityflow/: __init__.py  cli.py
serenityflow_mcp/: __init__.py  __main__.py  client.py  config.py  server.py  tools.py
tests/: audit_templates.py  template_audit_report.json  test_bridge_handles.py  test_budget.py  test_cache.py  test_cache_residency.py  test_compat_imports.py  test_compat_model_patcher.py  test_conditioning.py  test_debug.py  test_face_restorer.py  test_fp8_dequant.py  test_graph.py  test_hooks.py  test_lanpaint.py  test_ltx_gemma_compat.py  test_model_detect.py  test_model_loading.py  test_nodes_conditioning.py  test_nodes_phase4.py  test_patch_integration.py  test_patch_ledger.py  test_planner.py  test_runner.py  test_runtime_hooks.py  test_server.py  test_server_ws.py  test_template_parse.py  test_timeline.py  test_types.py  test_unified_models.py  test_workflow_parse.py
text/: __init__.py  byt5.py  clip.py  gemma3.py  qwen3.py  (+7 more)
(+324 files in other folders)
