[project]
name = "serenityflow"
version = "0.1.0"
description = "SerenityFlow v2 - Clean-room ComfyUI workflow executor with Stagehand memory management"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "pyyaml",
    "fastapi",
    "uvicorn",
    "python-multipart",
]

[project.optional-dependencies]
stagehand = ["stagehand"]
dev = ["pytest", "httpx"]

[project.scripts]
serenityflow = "serenityflow.cli:main"
